# DataVisualization2

./: .dockerignore  Dockerfile  cloudbuild.yaml  dashboard.ipynb  main.py  precompute.py  pyproject.toml  styles.py  tutorial_steps.md
assets/: custom.css  driver_custom.css  theme.js  tour.js
data/: .gitattributes  explore_optimized.parquet  explore_options.json  games.csv  games.json  insights_precomputed.json  overview_precomputed.json
tabs/: about.py  explore.py  insights.py  overview.py
