[project]
name = "steam-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dash>=4.1.0",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "sentence-transformers>=5.5.1",
    "nbformat>=5.10.4",
]
